# imap-smtp-mcp

./: .gitignore  AGENTS.md  Dockerfile  IMPLEMENTATION_PLAN.md  INTEGRATIONS.md  README.md  docker-compose.yml  env.example  pyproject.toml  test.env
.github/workflows/: ci.yml
docs/: configuration.md  deployment.md  example_prompts.md  local_debug.md  manual_mcp_compat_suite.md  milestone4.md  milestone6.md  release_checklist.md  security_operations.md
scripts/: manual_mcp_compat_suite.py  run_debug_server.py
security-audits/: Codex55extrahigh.txt  README.md  SECURITY_AUDIT_2026-05-14.md  opus47high.txt  security_review_2026-05-14.md  security_review_2026-05-16.md  security_review_2026-05-19.md  security_review_2026-05-20.md
src/imap_smtp_mcp/: __init__.py  attachments.py  audit.py  auth.py  capabilities.py  config.py  errors.py  imap_adapter.py  oauth.py  read_tools.py  send_tools.py  server.py  smtp_adapter.py  tool_controller.py  validation.py  write_tools.py
tests/: test_attachments.py  test_ci_workflow.py  test_debug_server_script.py  test_docs_and_env.py  test_manual_suite.py  test_milestone1.py  test_milestone2.py  test_milestone3.py  test_milestone4.py  test_milestone5.py  test_milestone6.py  test_milestone7.py  test_milestone8.py  test_milestone_oauth.py  test_milestone_server.py  test_tool_controller.py
